--- a/index.html
+++ b/index.html
@@ -27,20 +27,20 @@
     })();
   </script>
 
-  <link rel="stylesheet" media="screen" href="http://dc89f960.ngrok.io/assets/materialdesignicons.min.self-ef558c7107d7220ab1305ca72d493d92e6002e30a457c8b61efc48099546fdf5.css?body=1" />
-<link rel="stylesheet" media="screen" href="http://dc89f960.ngrok.io/assets/plugins.self-432f7642176cbbe3478c7986ce439b2c99642bf0f1a81ae971e7c7e6c1e3c3b5.css?body=1" />
-  <script src="http://dc89f960.ngrok.io/assets/sequence_format.self-92e75054e863b2263301839defb464bcf13b0f363bb59d5891f2e264f7d3b1cb.js?body=1"></script>
-<script src="http://dc89f960.ngrok.io/assets/moment.self-34da66f0997d145341cfb3fc71c794ea32b4c6affa3ff5d9e7e5107170125d1c.js?body=1"></script>
-<script src="http://dc89f960.ngrok.io/assets/lodash/lodash.self-1d0878ed2403c52d203a296ba567afc1b70b6676393e239e9b09b33d9811d5e9.js?body=1"></script>
-<script src="http://dc89f960.ngrok.io/assets/jquery.self-bd7ddd393353a8d2480a622e80342adf488fb6006d667e8b42e4c0073393abee.js?body=1"></script>
-<script src="http://dc89f960.ngrok.io/assets/react.min.self-567e5c1e9e5c2eec4d735485ba3477f34082fccf72f75f100111505b3f698111.js?body=1"></script>
-<script src="http://dc89f960.ngrok.io/assets/react-dom.min.self-a89a5e174061f85e316e20a762dccde878bfd205d60107e22b500d1a264aff26.js?body=1"></script>
-<script src="http://dc89f960.ngrok.io/assets/slick.min.self-189a35d16c1f505c16f3aff3b82dc09c0de881e5dcbacf4867e91bcd20402e4d.js?body=1"></script>
-<script src="http://dc89f960.ngrok.io/assets/action_cable.self-69fddfcddf4fdef9828648f9330d6ce108b93b82b0b8d3affffc59a114853451.js?body=1"></script>
-<script src="http://dc89f960.ngrok.io/assets/client_cable.self-d2af95138be41962446124fefa18b0ed2526c265b807c5ed64ac94f9d8bf8e72.js?body=1"></script>
-<script src="http://dc89f960.ngrok.io/assets/push.js/push.min.self-ec5f45c044c4874d81b83baf2f74511a8260e4140aac1f02415ec64c21474eaa.js?body=1"></script>
-<script src="http://dc89f960.ngrok.io/assets/cu_webplugin/www/cu-web-plugin.bundle.min.self-7c06bcfc35dcc51df40869721050d35c7324c601b913f08bb4f7fd350495fa28.js?body=1"></script>
-<script src="http://dc89f960.ngrok.io/assets/plugins.self-d1e25e2d7ace5e7561c0ae7c58d171a50e06ed6eac980c6aba345c2ab98adfcc.js?body=1"></script>
+  <link rel="stylesheet" media="screen" href="https://dc89f960.ngrok.io/assets/materialdesignicons.min.self-ef558c7107d7220ab1305ca72d493d92e6002e30a457c8b61efc48099546fdf5.css?body=1" />
+<link rel="stylesheet" media="screen" href="https://dc89f960.ngrok.io/assets/plugins.self-432f7642176cbbe3478c7986ce439b2c99642bf0f1a81ae971e7c7e6c1e3c3b5.css?body=1" />
+  <script src="https://dc89f960.ngrok.io/assets/sequence_format.self-92e75054e863b2263301839defb464bcf13b0f363bb59d5891f2e264f7d3b1cb.js?body=1"></script>
+<script src="https://dc89f960.ngrok.io/assets/moment.self-34da66f0997d145341cfb3fc71c794ea32b4c6affa3ff5d9e7e5107170125d1c.js?body=1"></script>
+<script src="https://dc89f960.ngrok.io/assets/lodash/lodash.self-1d0878ed2403c52d203a296ba567afc1b70b6676393e239e9b09b33d9811d5e9.js?body=1"></script>
+<script src="https://dc89f960.ngrok.io/assets/jquery.self-bd7ddd393353a8d2480a622e80342adf488fb6006d667e8b42e4c0073393abee.js?body=1"></script>
+<script src="https://dc89f960.ngrok.io/assets/react.min.self-567e5c1e9e5c2eec4d735485ba3477f34082fccf72f75f100111505b3f698111.js?body=1"></script>
+<script src="https://dc89f960.ngrok.io/assets/react-dom.min.self-a89a5e174061f85e316e20a762dccde878bfd205d60107e22b500d1a264aff26.js?body=1"></script>
+<script src="https://dc89f960.ngrok.io/assets/slick.min.self-189a35d16c1f505c16f3aff3b82dc09c0de881e5dcbacf4867e91bcd20402e4d.js?body=1"></script>
+<script src="https://dc89f960.ngrok.io/assets/action_cable.self-69fddfcddf4fdef9828648f9330d6ce108b93b82b0b8d3affffc59a114853451.js?body=1"></script>
+<script src="https://dc89f960.ngrok.io/assets/client_cable.self-d2af95138be41962446124fefa18b0ed2526c265b807c5ed64ac94f9d8bf8e72.js?body=1"></script>
+<script src="https://dc89f960.ngrok.io/assets/push.js/push.min.self-ec5f45c044c4874d81b83baf2f74511a8260e4140aac1f02415ec64c21474eaa.js?body=1"></script>
+<script src="https://dc89f960.ngrok.io/assets/cu_webplugin/www/cu-web-plugin.bundle.min.self-7c06bcfc35dcc51df40869721050d35c7324c601b913f08bb4f7fd350495fa28.js?body=1"></script>
+<script src="https://dc89f960.ngrok.io/assets/plugins.self-d1e25e2d7ace5e7561c0ae7c58d171a50e06ed6eac980c6aba345c2ab98adfcc.js?body=1"></script>
   <!-- <script src="http://localhost:8000/cu-web-plugin.bundle.js"></script> -->
 </head>
 
@@ -51,19 +51,19 @@
   <input type="hidden" name="service_id" id="service_id" value="5258" />
   <input type="hidden" name="chat_title" id="chat_title" />
   <input type="hidden" name="sequences" id="sequences" />
-  <input type="hidden" name="chat_image" id="chat_image" value="http://dc89f960.ngrok.io/assets/web_plugin_chat-a5604576a51d3a772b9da963eebfffc35b26bcb9c73b258777e4d6b5b2dc6ab7.svg" />
+  <input type="hidden" name="chat_image" id="chat_image" value="https://dc89f960.ngrok.io/assets/web_plugin_chat-a5604576a51d3a772b9da963eebfffc35b26bcb9c73b258777e4d6b5b2dc6ab7.svg" />
   <input type="hidden" name="bot_img_def" id="bot_img_def" />
   <input type="hidden" name="bot_img_1" id="bot_img_1" />
   <input type="hidden" name="bot_img_2" id="bot_img_2" />
   <input type="hidden" name="operator_img" id="operator_img" />
-  <input type="hidden" name="client_img" id="client_img" value="http://dc89f960.ngrok.io/assets/none-af0a2dae712f8621d3328771c3ed8e92ab24be30d66031841d7aa945f79b35d0.svg" />
-  <input type="hidden" name="head_img" id="head_img" value="http://dc89f960.ngrok.io/assets/clear-71b445dc8c205bec33e05ff5f25b918e7fe4f2ec64c5b484f719731429d50852.svg" />
+  <input type="hidden" name="client_img" id="client_img" value="https://dc89f960.ngrok.io/assets/none-af0a2dae712f8621d3328771c3ed8e92ab24be30d66031841d7aa945f79b35d0.svg" />
+  <input type="hidden" name="head_img" id="head_img" value="https://dc89f960.ngrok.io/assets/clear-71b445dc8c205bec33e05ff5f25b918e7fe4f2ec64c5b484f719731429d50852.svg" />
   <input type="hidden" name="global_time" id="global_time" value="%Y年%m月%d日 %H:%M" />
-  <input type="hidden" name="send_img" id="send_img" value="http://dc89f960.ngrok.io/assets/send-099c44daaf9108ff783307066d8060abc8e55641f5cff92040bf42b2cc32c5c6.svg" />
+  <input type="hidden" name="send_img" id="send_img" value="https://dc89f960.ngrok.io/assets/send-099c44daaf9108ff783307066d8060abc8e55641f5cff92040bf42b2cc32c5c6.svg" />
 
   <script>
     var api_path = location.protocol + '//' + location.hostname + (location.port ? ':' + location.port : '');
-    var push_icon = "http://dc89f960.ngrok.io/assets/concierge-705e4d5fcae5ef3b18ee17506936bb2e332aff8a1d14c5a9bdd611d16ebf699c.png";
+    var push_icon = "https://dc89f960.ngrok.io/assets/concierge-705e4d5fcae5ef3b18ee17506936bb2e332aff8a1d14c5a9bdd611d16ebf699c.png";
 
     var addons_options = {"scenario_editable":false,"translation":false,"common_component_editable":false,"scenario_duplicable":false,"user_analysis":false,"csv_export":false,"external_cooperation":false,"operator_response":true};
     var isAnonymous = "false" === "false";
